--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "nodemon --watch 'src/' --exec \"ts-node src/server.ts\" -e ts",
     "test": "jest --maxWorkers=1",
+    "plop": "plop",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/config/orm/index.ts",
     "docker:test": "docker-compose -p fin-api-test -f docker-compose-test.yml run --rm test",
     "docker:migration:run": "docker-compose -f docker-compose-cli.yml run --rm cli yarn typeorm migration:run",
@@ -48,6 +49,7 @@
     "faker": "^5.5.3",
     "jest": "^27.2.0",
     "nodemon": "^2.0.12",
+    "plop": "^2.7.4",
     "prettier": "^2.4.0",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
